--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <html>
 
 <head>
-
     <meta property="og:site_name" content="Echos Awareness" />
     <meta property="og:site_name" content="3kh0.net" />
     <meta property="og:title" content="3kh0.net" />
-    <meta property="og:description"
-        content="I am Echo, programmer, hacker, and furry. Welcome to my personal website! :D" />
+    <meta property="og:description" content="I am Echo, programmer, hacker, and furry. Welcome to my personal website! :D" />
     <meta property="og:url" content="https://youtube.com/" />
     <meta property="og:image" id="ogImage" content="https://via.placeholder.com/512" />
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <audio id="aud" controls style="display:none;">
@@ -18,15 +16,7 @@
 
 <body onload="playAudio()">
 
-    <script>
-        function playAudio() {
-            var audioElement = document.getElementById("aud");
-            audioElement.play();
-        }
-    </script>
-
-    <div></div>
-
+    <script src="script.js"></script>
 </body>
 
 
