FInal Push For Niw

--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <meta property="og:description" content="I am Echo, programmer, hacker, and furry. Welcome to my personal website! :D" />
     <meta property="og:url" content="https://youtube.com/" />
     <meta property="og:image" id="ogImage" content="https://via.placeholder.com/512" />
+
+    <title>3hk0</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <audio id="aud" controls style="display:none;">
-    <source src="res/BGM.mp3" type="audio/mp3">
+    <source id="s" type="audio/mp3">
 </audio>
 
-<body onload="playAudio()">
+<body onmouseenter="playAudio()">
 
+    <div class="yeah-this-web-design-sucks-but-whatever">
+        <img src="res/pic1.png">
+        <img src="res/pic2.png">
+        <img src="res/pic3.png">
+        <h1>Uh, yeah.. I got it</h1>
+    </div>
+    <footer>
+        <p style="color: rgba(255,255,255,0.1); display:block;text-align: center; margin: 5px auto">yeah design sucks, i wasnt trying.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
