--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
 
 <head>
-    <meta property="og:site_name" content="Echos Awareness" />
+    <meta property="og:site_name" content="Echo Awareness" />
     <meta property="og:site_name" content="3kh0.net" />
     <meta property="og:title" content="3kh0.net" />
-    <meta property="og:description" content="I am Echo, programmer, hacker, and furry. Welcome to my personal website! :D" />
-    <meta property="og:url" content="https://youtube.com/" />
-    <meta property="og:image" id="ogImage" content="https://via.placeholder.com/512" />
+    <meta property="og:description" content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details." />
+    <meta property="og:image" id="ogImage" content="res/3kh0.png" />
 
     <title>3hk0</title>
     <link rel="stylesheet" href="style.css">
@@ -27,7 +26,10 @@
     <footer>
         <p>yeah design sucks, i wasnt trying.</p>
     </footer>
-    <iframe sandbox="allow-same-origin allow-scripts" crossorigin src="https://pornhub.com/" style="border:1px #ffffff solid;" name="ph" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+    <h1 class="p">Making A Wall Out Of Echo's Fursona</h1>
+    <div class="y">
+        <img class="xd" src="res/xmr_hoodie.webp">
+    </div>
     <script src="script.js"></script>
 </body>
 
