--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details." />
     <meta property="og:image" id="ogImage" content="res/3kh0.png" />
 
-    <title>3hk0</title>
+    <title>Echo Awareness</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
