--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
 
 <head>
-    <!-- Your meta tags and other head elements -->
+    <meta property="og:site_name" content="Echo Awareness">
+    <meta property="og:site_name" content="3kh0.net">
+    <meta property="og:title" content="3kh0.net">
+    <meta property="og:description" content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details.">
+    <meta property="og:image" id="ogImage" content="/res/3kh0.png">
+    <meta property="og:image" content="https://echoisafurry.com/res/3kh0.png">
+    <link rel="icon" href="/res/3kh0.png">
+    <link rel="shortcut icon" href="/res/3kh0.png">
+
     <title>Echo Awareness</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">>
 </head>
 
 <body onmouseenter="playRandomAudio()" onclick="playRandomAudio()" onfocus="playRandomAudio()">
