--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <head>
     <meta property="og:site_name" content="Echo Awareness">
-    <meta property="og:site_name" content="3kh0.net">
-    <meta property="og:title" content="3kh0.net">
-    <meta property="og:description" content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details.">
+    <meta property="og:site_name" content="t.co/pAiKdjX1US">
+    <meta property="og:title" content="t.co/pAiKdjX1US">
+    <meta property="og:description"
+        content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details.">
     <meta property="og:image" id="ogImage" content="/res/3kh0.png">
     <meta property="og:image" content="https://echoisafurry.com/res/3kh0.png">
     <link rel="icon" href="/res/3kh0.png">
