--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <source id="s" type="audio/mp3">
     </audio>
 
-    <div class="yeah-this-web-design-sucks-but-whatever">
+    <div id="one" class="yeah-this-web-design-sucks-but-whatever">
         <img src="res/pic1.png">
         <img src="res/pic2.png">
         <img src="res/pic3.png">
