--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Yeah i basically just spat a bunch of shit into this document, alot of errors in console too lmao, but.. yeah -->
+
 <html>
 
 <head>
@@ -15,26 +17,118 @@
     <link rel="stylesheet" href="style.css">>
 </head>
 
-<body onmouseenter="playRandomAudio()" onclick="playRandomAudio()" onfocus="playRandomAudio()">
+<body>
+    <div id="wait">
+        <button id="x">Click This Shitty Looking Button To Enter</button>
+    </div>
+
+<!-- Not even gonna format this shit lmao -->
 
     <audio id="aud" controls style="display:none;">
         <source id="s" type="audio/mp3">
     </audio>
 
     <div id="one" class="yeah-this-web-design-sucks-but-whatever">
-        <img src="res/pic1.png">
-        <img src="res/pic2.png">
-        <img src="res/pic3.png">
+        <img id="j" src="res/pic1.png">
+        <img id="j" src="res/pic2.png">
+        <img id="j" src="res/pic3.png">
         <h1>Uh, yeah.. I got it</h1>
     </div>
     <footer>
-        <p>yeah design sucks, i wasnt trying.</p>
+        <p id="foot" class="e">yeah design sucks, i wasnt trying.</p>
     </footer>
-    <h1 class="p">Making A Wall Out Of Echo's Fursona</h1>
-    <div class="y">
-        <img class="xd" src="res/xmr_hoodie.webp">
+
+    <img id="foot2" class="e" src="res/ad.png">
+
+    <h1 id="k" class="p">Making A Wall Out Of Echo's Fursona</h1>
+    <div id="l" class="y">
+        <img id="oo" class="xd" src="res/xmr_hoodie.webp">
     </div>
+
     <script src="script.js"></script>
 </body>
 
 </html>
+
+
+<!-- 
+
+
+                                                                                                                                                                                                                    
+                                                                                                                                                                                                                    
+                                                                                                                                                                                                                
+                                                                                                                                                                                                          
+                                                                                                                                                                                                       
+                                                                                                                                                                                                           
+                                                                                                                                                                                                             
+                                                                                                                                                                                                            
+                                                                                                                                                                                                          
+                                                                                                                                                                                               
+                                                                                                                                                                                          
+                                                                                                                                                                                             
+                                                                                                                                                                                                 
+                                                                                                                                                                                                    
+                                                                                                                                                                                                 
+                                                                                                                                                                                                
+                                                                                                                                                                                                
+                                                                                                                                                                                                  
+                                                                                                                                                                                                
+                                                                                                                                                                                              
+                                                                                                                                                                                            
+                                                                                                                                                                                           
+                                                                                                                                                                                               
+                                                                                                                                                                                              
+                                                                                                                                                                                               
+                                                                                                                                                                                              
+                                                                                                                                                                                             
+                                                                                                                                                                                          
+                                                                                                                                                                                       
+                                                                                                                                                                            
+                                                                                                                                                                                 
+                                                                                                                                                                                      
+                                                                                                                                                                                            
+                                                                                                                                                                                           
+                                                                                                                                                                                      
+                                                                                                                                                                            
+                                                                                                                                                                                 
+                                                                                                                                                                                          
+                                                                                                                                                                                      
+                                                                                                                                                                                        
+                                                                                                                                                                                             
+                                                                                                                                                                                              
+                                                                                                                                                                                                
+                                                                                                                                                                                               
+                                                                                                                                                                                        
+                                                                                                                                                                                        
+                                                                                                                                                                                            
+                                                                                                                                                                                          
+                                                                                                                                                                                        
+                                                                                                                                                                                      
+                                                                                                                                                                                   
+                                                                                                                                                                           
+                                                                                                                                                                   
+                                                                                                                                                                      
+                                                                                                                                                                                  
+                                                                                                                                                                                          
+                                                                                                                                                                                                
+                                                                                                                                                                                                   
+                                                                                                                                                                                                          
+                                                                                                                                                                                                                  
+                                                                                                                                                                                                           
+                                                                                                                                                                                                
+                                                                                                                                                                                     
+                                                                                                                                                                                 
+                                                                                                                                                                                       
+                                                                                                                                                                                    
+                                                                                                                                                                                         
+                                                                                                                                                                             
+                                                                                                                                                                              
+                                                                                                                                                                                       
+                                                                                                                                                                                 
+                                                                                                                                                                                
+                                                                                                                                                                                            
+                                                                                                                                                                                                        
+
+
+
+-->
