--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 
     <img id="foot2" class="e" src="res/ad.png">
 
+    <!--
+    <script src="https://unpkg. com/@ruffle- rs/ ruffle"></script>
+    <embed id="pp" src="res/tb cf.swf" type="applic ation /x-shockw ave- flash" id="gam e">
+    -->
+
     <h1 id="k" class="p">Making A Wall Out Of Echo's Fursona</h1>
     <div id="l" class="y">
         <img id="oo" class="xd" src="res/xmr_hoodie.webp">
