--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img id="j" src="res/pic1.png">
         <img id="j" src="res/pic2.png">
         <img id="j" src="res/pic3.png">
+        
         <h1>Uh, yeah.. I got it</h1>
     </div>
     <footer>
@@ -39,6 +40,8 @@
     </footer>
 
     <img id="foot2" class="e" src="res/ad.png">
+
+    <img id="foot3" class="e" src="res/screen34.png">
 
     <!--
     <script src="https://unpkg. com/@ruffle- rs/ ruffle"></script>
