--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Yeah i basically just spat a bunch of shit into this document, alot of errors in console too lmao, but.. yeah -->
-
+<!-- UwU -->
 <html>
 
 <head>
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="/res/icon.png">
 
     <title>Echo Awareness</title>
-    <link rel="stylesheet" href="style.css">>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -43,6 +43,15 @@
 
     <img id="foot3" class="e" src="res/screen34.png">
 
+    <div id="pe">
+        <h1>fuck g1thub for deleting my shit, free TayK!!!</h1>
+        <p>8========D</p>
+        <video controls autoplay="false" loop muted>
+            <!-- You can use multiple source elements for different video formats -->
+            <source src="idk/a.webm" type="video/webm">
+            Your browser does not support the video tag.
+        </video>
+    </div>
     <!--
     <script src="https://unpkg. com/@ruffle- rs/ ruffle"></script>
     <embed id="pp" src="res/tb cf.swf" type="applic ation /x-shockw ave- flash" id="gam e">
