--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Free Porn Videos &amp; Sex Movies - Porno, XXX, Porn Tube &#124; Pornhub</title>
+    <title>xxx</title>
     <link rel="icon" sizes="512x512" href="res/favicon.ico">
     <link rel="stylesheet" href="gl/Fonts.css">
     <link rel="stylesheet" href="style.css">
